k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-clone-service
spec:
  selector:
    app: netflix-clone
  ports: 
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
